# ymir-helga

./: .gitignore  CMakeLists.txt  README.md
UML/: simon-says-mkag.mdj  uml-jogo.uxf
assets/Mapas/: caverna.txt  planicie.txt
include/: Animacao.h  Constants.h  Ente.h  IDs.h  Imagem.h  Jogo.h  Mediator.h  Menu.h  Observer.h  ObserverFase.h  Principal.h  State.h  Subject.h  ente.h  gerenciador-grafico.h  jogo.h  utils.hpp
include/Animador/: Animacao.h  Imagem.h
include/Controladores/: ControladorJogador.h  ControladorMenu.h
include/Ente/: Ente.h
include/Entidades/: Entidade.h  Projetil.h
include/Entidades/Obstaculos/: Espinho.h  Gosma.h  Obstaculo.h  Plataforma.h
include/Entidades/Personagens/: Esqueleto.h  Helga.h  Inimigo.h  Jogador.h  Mago.h  Personagem.h  Skjolder.h  Slime.h
include/Fabrica/: FabricaEntidades.h  FabricaEntidadesCaverna.h  FabricaEntidadesPlanicie.h  FabricaFireball.h  FabricaFlechas.h  FabricaProjeteis.h
include/Fases/: Caverna.h  Fase.h  Planicie.h
include/Gerenciadores/: GerenciadorColisoes.h  GerenciadorEstados.h  GerenciadorEventos.h  GerenciadorGrafico.h  GerenciadorInput.h
include/Listas/: Elemento.h  Lista.h  ListaEntidades.h
include/Menu/: Botao.h  GameOver.h  Menu.h  MenuPausa.h  MenuPrincipal.h
include/gerenciadores/: gerenciador-eventos.h  gerenciador-grafico.h
src/: Animacao.cpp  CMakeLists.txt  Ente.cpp  Imagem.cpp  Jogo.cpp  ListaEntidade.cpp  Main.cpp  Mediator.cpp  Observer.cpp  ObserverFase.cpp  Principal.cpp  State.cpp  Subject.cpp  gerenciador-grafico.cpp  jogo.cpp  main.cpp  utils.cpp
src/Animador/: Animacao.cpp  Imagem.cpp
src/Controladores/: ControladorJogador.cpp  ControladorMenu.cpp
src/Ente/: Ente.cpp
src/Entidades/: Entidade.cpp  Projetil.cpp
src/Entidades/Obstaculos/: Espinho.cpp  Gosma.cpp  Obstaculo.cpp  Plataforma.cpp
src/Entidades/Personagens/: Esqueleto.cpp  Helga.c  Helga.cpp  Inimigo.cpp  Jogador.cpp  Mago.cpp  Personagem.cpp  Skjolder.cpp  Slime.cpp
src/Fabrica/: FabricaEntidades.cpp  FabricaEntidadesCaverna.cpp  FabricaEntidadesPlanicie.cpp  FabricaFireball.cpp  FabricaFlechas.cpp  FabricaProjeteis.cpp
src/Fases/: Caverna.cpp  Fase.cpp  Planicie.cpp
src/Gerenciadores/: GerenciadorColisoes.cpp  GerenciadorEstados.cpp  GerenciadorEventos.cpp  GerenciadorGrafico.cpp  GerenciadorInput.cpp  GerenciadorInput.h
src/Listas/: ListaEntidade.cpp
src/Menu/: Botao.cpp  GameOver.cpp  Menu.cpp  MenuPausa.cpp  MenuPrincipal.cpp
src/Observer/: Observer.cpp
src/gerenciadores/: gerenciador-eventos.cpp  gerenciador-grafico.cpp
tests/: CMakeLists.txt  IDTest.cpp  JogoTest.cpp  controlador_jog_tests.cpp  ge_tests.cpp  gg_tests.cpp  gi_tests.cpp  main_tests.cpp  test_main.cpp
tests/Controladores/: ControladorJogadorTest.cpp
tests/Entes/: JogadorTest.cpp
tests/Fases/: CavernaTest.cpp
